@@ -1,3 +1,7 @@
+2004-08-29  Chad Fowler <chad@chadfowler.com>
+	* /lib/rubygems/gem_command.rb: small big fix for local gem installs
+	on Windows.
+
 2004-08-28  Rich Kilmer <rich@infoether.com>
 
         * /lib/rubygems/installer.rb, /lib/rubygems/doc_manager.rb, 
